index.css
html, body {
    margin: 0;
    padding: 0;
    font-family: 'Rubik', sans-serif;
    background-color: #EEF0F4;
    color: #432000;
    user-select: none;
}

.container {
    display: flex;
    flex-direction: column;
    max-width: 320px;
    margin: 30px auto;
}

img {
    width: 150px;
    margin: 0 auto;
}

input {
    color: #432000;
    background-color: #DCE1EB;
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
    margin: 10px 0;
}

button {
    color: #FDFDFD;
    background-color: #AC485A;
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
}

button:hover {
    background-color: #432000;
    cursor: pointer;
}

ul {
    list-style-type: none;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

ul li {
    font-size: 20px;
    background-color: #FFFDF8;
    padding: 15px;
    border-radius: 8px;
    flex-grow: 1;
    text-align: center;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
}

ul li:hover {
    background-color: #FFECC7;
    cursor: pointer;
}

